Project RacingGuru_updated {
  database_type: 'PostgreSQL'
  Note: 'Актуальная схема по RacingGuru/migrations/000001_init.up.sql. Расчетные функции: CalculateDriverStats, CalculateTeamStats, CalculatePersonalPoints.'
}

Table manufacturer {
  id uuid [primary key, default: `uuid_generate_v4()`]
  name text [not null]
  country text [not null]
  year_of_foundation integer [not null]
}

Table raceclass {
  id uuid [primary key, default: `uuid_generate_v4()`]
  name text [not null]
  docs text
}

Table car {
  id uuid [primary key, default: `uuid_generate_v4()`]
  model text [not null]
  year_of_production integer [not null]
  manufacturer uuid
  raceclass uuid
}

Table team {
  id uuid [primary key, default: `uuid_generate_v4()`]
  name text [not null]
  logo bytea
  country text
}

Table car_p {
  id uuid [primary key, default: `uuid_generate_v4()`]
  number text [not null]
  car uuid
  team uuid
}

Table team_p {
  car_p uuid
  driver uuid
}

Table organizer {
  id uuid [primary key, default: `uuid_generate_v4()`]
  name text [not null]
}

Table championship {
  id uuid [primary key, default: `uuid_generate_v4()`]
  year integer [not null]
  organizer uuid
}

Table track {
  id uuid [primary key, default: `uuid_generate_v4()`]
  name text [not null]
  country text [not null]
  schema bytea
  lap_length integer [not null]
  turns integer [not null]
}

Table race {
  id uuid [primary key, default: `uuid_generate_v4()`]
  name text [not null]
  date date [not null]
  type integer [not null]
  duration integer [not null]
  track uuid
  championship uuid
}

Table driver {
  id uuid [primary key, default: `uuid_generate_v4()`]
  name text [not null]
  photo bytea
  nationality text [not null]
  birthday date [not null]

  indexes {
    (name, nationality, birthday) [unique, name: 'unique_driver']
  }
}

Table finish {
  pos integer [not null]
  race uuid
  car_p uuid
}

Table qualifying {
  pos integer [not null]
  car_p uuid
  race uuid
}

Table users {
  id uuid [primary key, default: `uuid_generate_v4()`]
  name text [not null]
  email text [not null]
  passwordhash varchar(256) [not null]
  role text [not null, note: 'admin | user']
  created_at timestamp
}

Table favourite_drivers {
  user_id uuid [not null]
  driver uuid [not null]
}

Table favourite_teams {
  user_id uuid [not null]
  team uuid [not null]
}

Table sudoku_matrix_completions {
  user_id uuid [not null]
  matrix_type text [not null, note: 'drivers | teams']
  completed_on date [not null, default: `CURRENT_DATE`]

  indexes {
    (user_id, matrix_type, completed_on) [unique, name: 'sudoku_matrix_completions_unique']
  }
}

Ref: car.manufacturer > manufacturer.id [delete: cascade]
Ref: car.raceclass > raceclass.id [delete: cascade]
Ref: car_p.car > car.id [delete: cascade]
Ref: car_p.team > team.id [delete: cascade]
Ref: team_p.car_p > car_p.id [delete: cascade]
Ref: team_p.driver > driver.id [delete: cascade]
Ref: championship.organizer > organizer.id [delete: cascade]
Ref: race.track > track.id [delete: cascade]
Ref: race.championship > championship.id [delete: cascade]
Ref: finish.race > race.id [delete: cascade]
Ref: finish.car_p > car_p.id [delete: cascade]
Ref: qualifying.race > race.id [delete: cascade]
Ref: qualifying.car_p > car_p.id [delete: cascade]
Ref: favourite_drivers.user_id > users.id
Ref: favourite_drivers.driver > driver.id
Ref: favourite_teams.user_id > users.id
Ref: favourite_teams.team > team.id
Ref: sudoku_matrix_completions.user_id > users.id [delete: cascade]
